--- a/src/assets/locale/ru.json
+++ b/src/assets/locale/ru.json
@@ -2,6 +2,7 @@
   "table": {
     "additive" : "Добавка",
     "status" : "Статус",
-    "name" : "Название"
+    "name" : "Наименование",
+    "search" : "Поиск по добавке и наименованию"
   }
 }
